--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,8 @@ title: HRP Portfolio Optimization
 description: Hierarchical Risk Parity Project by Dr. Athar Kharal
 theme: minima
 markdown: kramdown
+include:
+  - index.md
+  - theory.md
+  - implementation.md
+  - applications.md
