--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@ title: "HRP Portfolio Optimization"
 description: "Hierarchical Risk Parity Project by Dr. Athar Kharal"
 theme: minima
 markdown: kramdown
-baseurl: "/HRP-Portfolio-Management" # Set to "/HRP-Portfolio-Management" if using a project page
-url: "https://atharkharal.github.io" # Replace with your GitHub username
+# baseurl: "/HRP-Portfolio-Management" # Set to "/HRP-Portfolio-Management" if using a project page
+# url: "https://atharkharal.github.io" # Replace with your GitHub username
 include:
   - index.md
   - theory.md
